--- a/src/app/core/landing/split-landing/split-landing.html
+++ b/src/app/core/landing/split-landing/split-landing.html
@@ -1,3 +1,4 @@
+<app-cookie-consent />
 <div
   class="w-screen h-screen relative select-none font-sans bg-black"
   style="font-family: 'Rubik', sans-serif"
