--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,9 +1,10 @@
-<artabrian-navbar />
+<navbar [pageSections]="pageSections"></navbar>
+<!-- Luego tus componentes: -->
 <hero-section id="home" [tcgId]="tcgId()"></hero-section>
 <tournament-section id="tournaments" [tcgId]="tcgId()"></tournament-section>
 <location-section
   id="location"
   [locationData]="locationJson"
 ></location-section>
-<contact-section />
+<contact-section id="contact"></contact-section>
 <app-footer></app-footer>
