--- a/src/app/core/header/header.html
+++ b/src/app/core/header/header.html
@@ -4,7 +4,7 @@
   >
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img
-        src="../../../../assets/logos/artabrian-weekend-2025.svg"
+        src="assets/logos/artabrian-weekend-2025.svg"
         class="h-8"
         alt="artabrian-weekend-logo"
       />
