--- a/src/app/core/footer/footer.html
+++ b/src/app/core/footer/footer.html
@@ -5,7 +5,7 @@
     <div>
       <a href="/" aria-label="Inicio" class="flex items-center mb-4">
         <img
-          src="../../../assets/logos/artabrian-weekend-2025.svg"
+          src="assets/logos/artabrian-weekend-2025.svg"
           alt="Logo"
           class="h-16 sm:h-20 mr-2"
         />
